overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 /* In your CSS */
 body {
   font-family: 'Gotham', sans-serif;
-  overflow-x: hidden;
 }
 
 @keyframes scroll {
